[gd_scene load_steps=4 format=2]

[ext_resource path="res://WordGeneration/WordGenerator.gd" type="Script" id=1]
[ext_resource path="res://WordGeneration/word_setup.gd" type="Script" id=2]
[ext_resource path="res://WordGeneration/TextureReplacer.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="WordControl" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordViewportContainer" type="ViewportContainer" parent="WordControl"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordViewport" type="Viewport" parent="WordControl/WordViewportContainer"]
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="WordGenerator" type="Node2D" parent="WordControl/WordViewportContainer/WordViewport"]
script = ExtResource( 1 )
word_to_draw = "Elphis"
stroke_color = Color( 0.34902, 0.0745098, 0.0745098, 1 )

[node name="TextureRect" type="TextureRect" parent="WordControl/WordViewportContainer/WordViewport"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[connection signal="ready" from="." to="WordControl/WordViewportContainer/WordViewport/WordGenerator" method="_on_Node2D_ready"]
[connection signal="draw" from="WordControl/WordViewportContainer/WordViewport/WordGenerator" to="WordControl/WordViewportContainer/WordViewport/TextureRect" method="_on_WordGenerator_draw"]
